# mac-speech-commands.py

./: README.md  setup.cfg
mac_speech_commands/: __init__.py
