# https://pypi.org/project/setupcfg-generator/
[metadata]
name = mac-speech-commands
version = 2019.4.13
url = https://github.com/looking-for-a-job/mac-speech-commands.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = speech tts

[options]
install_requires = 
	public
	setuptools
packages = 
	mac_speech_commands
